Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignObjectBoolObj.quorum
class Main
    action Main
        Boolean v
        v:SetValue(true)
        Test(v)
    end

    action Test(Object var)
        Boolean value = cast(Boolean, var)
        if value:GetValue() = true
            output "passed"
        end
    end
end
