Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjBoolObjField.quorum
class main
    Boolean b
    Integer int
    action Main
        b:SetValue(true)
        int = cast(Integer, b)
    end
end